[gd_scene load_steps=11 format=3 uid="uid://cbnbtx8pn0mp6"]

[ext_resource type="Script" path="res://Flashcards/LearnFlashcardsView.gd" id="1_in4p4"]
[ext_resource type="FontFile" uid="uid://bv5k012hvoy82" path="res://Assets/Fonts/Roboto-Regular.ttf" id="2_pci26"]
[ext_resource type="AudioStream" uid="uid://cpt0ssx78wnm3" path="res://Assets/Audio/bubble-pop-ding.mp3" id="3_dpkjp"]
[ext_resource type="FontFile" uid="uid://bev2oa7b13423" path="res://Assets/Fonts/Roboto-Medium.ttf" id="4_bc4sd"]
[ext_resource type="Texture2D" uid="uid://cepyto8sfde03" path="res://Assets/xpup.png" id="5_73l5b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dy3md"]
bg_color = Color(0.831373, 0.831373, 0.831373, 0.956863)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08ybr"]
bg_color = Color(0.831373, 0.831373, 0.831373, 0.956863)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6twe"]
bg_color = Color(0.717647, 0.686275, 0.678431, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdb10"]
bg_color = Color(0.670588, 0.227451, 0.0627451, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eke7r"]
bg_color = Color(0.807843, 0.807843, 0.807843, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="LearnFlashcardsView" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -613.5
offset_top = -361.0
offset_right = 613.5
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_dy3md")
script = ExtResource("1_in4p4")

[node name="MouseArea" type="Control" parent="."]
anchors_preset = 0
offset_left = -115.0
offset_top = -54.0
offset_right = 1296.0
offset_bottom = 726.0
mouse_filter = 1

[node name="CardView" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="CardView"]
layout_mode = 2

[node name="Question" type="RichTextLabel" parent="CardView/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_pci26")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "Test"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="CardView/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Answer" type="RichTextLabel" parent="CardView/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_pci26")
theme_override_font_sizes/normal_font_size = 35
text = "Test"
fit_content = true

[node name="EndCardLeftView" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="EndCardLeftView"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="EndCardLeftView/VBoxContainer"]
layout_mode = 2
text = "Es sind noch ein paar Karten offen, willst du direkt weitermachen?"

[node name="HBoxContainer" type="HBoxContainer" parent="EndCardLeftView/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnContinue" type="Button" parent="EndCardLeftView/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ja"

[node name="BtnCancel" type="Button" parent="EndCardLeftView/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Nein"

[node name="EndFinishedView" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="EndFinishedView"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="EndFinishedView/VBoxContainer"]
layout_mode = 2
text = "Super. alle Karten gelernt!"

[node name="HBoxContainer" type="HBoxContainer" parent="EndFinishedView/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnBack" type="Button" parent="EndFinishedView/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Zur√ºck"

[node name="Header" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_top = -52.0
offset_right = 1217.0
offset_bottom = -2.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Header/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Panel" type="Panel" parent="Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(88.455, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_08ybr")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="Header/MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CardsCount" type="Label" parent="Header/MarginContainer/HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pci26")
theme_override_font_sizes/font_size = 20
text = "1/1"
horizontal_alignment = 1

[node name="Progress" type="ProgressBar" parent="Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_p6twe")
theme_override_styles/fill = SubResource("StyleBoxFlat_tdb10")

[node name="BtnClose" type="Button" parent="Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(55.24, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0562916, 0.0562916, 0.0562916, 1)
theme_override_fonts/font = ExtResource("2_pci26")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_eke7r")
text = "x"

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -30.0
offset_right = 102.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnBad" type="Button" parent="Buttons/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Schlecht"

[node name="BtnGood" type="Button" parent="Buttons/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Gut"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dpkjp")

[node name="Xp" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 726.5
offset_top = 749.0
offset_right = 766.5
offset_bottom = 789.0
mouse_filter = 1
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Xp"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Xp/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bc4sd")
theme_override_font_sizes/font_size = 25
text = "+25"

[node name="Control" type="Control" parent="Xp/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Xp/HBoxContainer/Control"]
layout_mode = 1
offset_left = 7.5
offset_top = -8.0
offset_right = 519.5
offset_bottom = 504.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_73l5b")
stretch_mode = 3

[connection signal="pressed" from="EndCardLeftView/VBoxContainer/HBoxContainer/BtnContinue" to="." method="_On_BtnContinue_Pressed"]
[connection signal="pressed" from="EndCardLeftView/VBoxContainer/HBoxContainer/BtnCancel" to="." method="_On_BtnClose_Pressed"]
[connection signal="pressed" from="EndFinishedView/VBoxContainer/HBoxContainer/BtnBack" to="." method="_On_BtnClose_Pressed"]
[connection signal="pressed" from="Header/MarginContainer/HBoxContainer/BtnClose" to="." method="_On_BtnClose_Pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/BtnBad" to="." method="_On_BtnBad_Pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/BtnGood" to="." method="_On_BtnGood_Pressed"]
